fix broken css

--- a/src/less/components/keywords/accordion.less
+++ b/src/less/components/keywords/accordion.less
@@ -9,6 +9,7 @@
     @padding-pad: 1px;
 
     height: @accordion-height;
+    margin-left: 10px;
     @media only screen and (max-width: @pad-width) {
         font-size: 11px;
     }
